# bocchi-guitar-hub-server

./: .dockerignore  .gitignore  LICENSE.txt  README.md  docker-compose.arm64.cpu.yml  docker-compose.cpu.yml  docker-compose.yml
kong/: kong-init.sh  kong.yaml.example
microservices/: .env  .gitignore  docker-compose.yml
microservices/allin1-webapi/: .gitignore  Dockerfile  Dockerfile.cpu  pyproject.cpu.toml  pyproject.toml
microservices/allin1-webapi/.devcontainer/: devcontainer.json
microservices/allin1-webapi/.devcontainer/cpu/: devcontainer.json
microservices/allin1-webapi/src/: analyze.py  main.py  spectrograms_process.py  structure_process.py  utility.py
microservices/crema(cuda)-webapi/: Dockerfile  pyproject.toml
microservices/crema(cuda)-webapi/.devcontainer/: devcontainer.json
microservices/crema(cuda)-webapi/src/: main.py  test.py
microservices/crema-webapi/: Dockerfile  pyproject.toml  requirements.txt
microservices/crema-webapi/.devcontainer/: devcontainer.json
microservices/crema-webapi/src/: main.py  test.py
microservices/demucs-webapi/: Dockerfile  Dockerfile.cpu  docker-compose.yml  pyproject.toml
microservices/demucs-webapi/.devcontainer/: devcontainer.json
microservices/demucs-webapi/.devcontainer/cpu/: devcontainer.json
microservices/demucs-webapi/src/: job.py  kill_worker.py  main.py  separate_process.py  test.py  test_queue.py  websocket.py
microservices/faster-whisper-webapi/: Dockerfile  Dockerfile.cpu  pyproject.toml
microservices/faster-whisper-webapi/.devcontainer/: devcontainer.json
microservices/faster-whisper-webapi/.devcontainer/cpu/: devcontainer.json
microservices/faster-whisper-webapi/src/: job.py  main.py  test.py  test_queue.py
microservices/redis/data/: dump.rdb
microservices/utility-webapi/: Dockerfile  pyproject.toml
microservices/utility-webapi/.devcontainer/: devcontainer.json
microservices/utility-webapi/app/: heavy_job_router.py  kill_worker.py  kyu_main.py  main.py  models.py  test.py  worker.py  worker_cpu.py  worker_cpu2.py  worker_gpu.py
microservices/utility-webapi/app/api/: deps.py  main.py
microservices/utility-webapi/app/api/routes/: allin1.py  async_job.py  audiofile.py  consumer.py  crema.py  demucs.py  util.py  whisper.py
microservices/utility-webapi/app/assets/: chords.json
microservices/utility-webapi/app/core/: config.py  heavy_job.py
microservices/utility-webapi/app/services/: adjust_chord.py  audio_conversion.py  chord_db.py  chord_service.py  midi_generator.py
microservices/whisper-webapi/: Dockerfile  pyproject.toml
microservices/whisper-webapi/.devcontainer/: devcontainer.json
microservices/whisper-webapi/src/: main.py
