[tool.poetry]
name = "allin1-webapi"
version = "0.1.0"
description = ""
authors = ["koki622 <koki08018907926@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "0.111.0"
uvicorn = "0.30.1"
python-multipart = "^0.0.9"
allin1 = "1.1.0"
natten = { url = "https://shi-labs.com/natten/wheels/cu124/torch2.5.0/natten-0.17.3%2Btorch250cu124-cp310-cp310-linux_x86_64.whl"}
torch = { version = "=2.5.1+cu124", source = "pytorch-cu124" }
torchvision = { version = "=0.20.1+cu124", source = "pytorch-cu124"}
torchaudio = { version = "=2.5.1+cu124", source = "pytorch-cu124"}
madmom = { git = "https://github.com/CPJKU/madmom.git"}
numpy = "1.23.0"
pydub = "^0.25.1"

[[tool.poetry.source]]
name = "natten"
url = "https://shi-labs.com/natten/wheels/"
secondary = true

[[tool.poetry.source]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/"
secondary = true

[build-system]
requires = ["poetry-core", "cython"]
build-backend = "poetry.core.masonry.api"

