[tool.poetry]
name = "crema-webapi"
version = "0.1.0"
description = ""
authors = ["koki622 <koki08018907926@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.17"
fastapi = "0.111.0"
uvicorn = "0.30.1"
crema = "^0.2.0"
tensorflow = "^2.15"
keras = "^2.15"
numpy = "1.23.5"
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
