[tool.poetry]
name = "faster-whisper-webapi"
version = "0.1.0"
description = ""
authors = ["koki622 <koki08018907926@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "0.111.0"
uvicorn = "0.30.1"
python-multipart = "^0.0.9"
sse-starlette = "^2.1.2"
faster-whisper = { git = "https://github.com/SYSTRAN/faster-whisper.git"}
pysubs2 = "^1.7.2"
onnxruntime = "<1.20.0"
ctranslate2 = "4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
