[tool.poetry]
name = "utility-webapi"
version = "0.1.0"
description = ""
authors = ["koki622 <koki08018907926@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "0.111.0"
uvicorn = "0.30.1"
python-multipart = "^0.0.9"
redis = "^5.0.7"
rq = "^1.16.2"
sse-starlette = "^2.1.2"
shortuuid = "^1.0.13"
pydantic-settings = "^2.3.4"
uvloop = "^0.19.0"
hiredis = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
