[tool.poetry]
name = "whisper-webapi"
version = "0.1.0"
description = ""
authors = ["koki622 <koki08018907926@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.111.0"
uvicorn = "0.30.1"

#demucs = { git = "https://github.com/javad-rzvn/demucs.git", rev="f61d304"}
#demucs = "4.0.1"
#torchaudio = "<2.1"
#torch = "<2.1, !=2.0.1, !=2.1.0"
python-multipart = "^0.0.9"
#numpy = "<2.0"
openai-whisper = "^20231117"
redis = "^5.0.7"
rq = "^1.16.2"
sse-starlette = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
